<resources>
    <string name="app_name"> FirebaseAuth </string>
    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate
with Firebase.</string>
    <string name="hint_user_id">User ID</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase UID: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>
    <string name="error_sign_in_failed">Sign in failed, see logs for details.</string>
    <string name="email_user">Email:</string>
    <string name="email_verified">Verified:</string>
    <string name="email_template">Email: %1$s</string>
    <string name="uid_template">Firebase UID: %1$s</string>
    <string name="verified_template">Email Verified: %1$s</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="verification_email_sent">Verification email sent.</string>
    <string name="failed_to_send_verification_email">Failed to send verification email.</string>
</resources>